package com.yogadarma.watchmovie.ui.screen.about

import androidx.compose.foundation.Image
import androidx.compose.foundation.layout.*
import androidx.compose.foundation.shape.CircleShape
import androidx.compose.material.MaterialTheme
import androidx.compose.material.Text
import androidx.compose.runtime.Composable
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.draw.clip
import androidx.compose.ui.layout.ContentScale
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.text.TextStyle
import androidx.compose.ui.text.font.FontStyle
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import com.yogadarma.watchmovie.R
import com.yogadarma.watchmovie.ui.theme.WatchMovieTheme

@Composable
fun AboutScreen(
    modifier: Modifier = Modifier
) {
    Column(
        modifier = modifier.fillMaxSize(),
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Spacer(modifier = Modifier.height(50.dp))
        Image(
            modifier = Modifier
                .size(150.dp)
                .clip(shape = CircleShape)
                .testTag("DeveloperImage"),
            painter = painterResource(id = R.drawable.img_developer),
            contentDescription = stringResource(id = R.string.image_about_description),
            contentScale = ContentScale.Crop
        )
        Spacer(modifier = Modifier.height(16.dp))
        Text(
            modifier = Modifier.testTag("DeveloperName"),
            text = stringResource(id = R.string.developer_name),
            style = MaterialTheme.typography.h6.copy(
                fontWeight = FontWeight.Bold
            )
        )
        Spacer(modifier = Modifier.height(8.dp))
        Text(
            modifier = Modifier.testTag("DeveloperEmail"),
            text = stringResource(id = R.string.developer_email),
            style = MaterialTheme.typography.subtitle1,
            fontStyle = FontStyle.Italic
        )
        Spacer(modifier = Modifier.weight(1f))
        Text(
            modifier = Modifier
                .padding(bottom = 16.dp)
                .testTag("CopyrightLabel"),
            text = stringResource(id = R.string.label_copyright),
            style = TextStyle(fontSize = 12.sp)
        )
    }
}

@Preview(showBackground = true)
@Composable
fun AboutScreenPreview() {
    WatchMovieTheme {
        AboutScreen()
    }
}